fixing overflow issues with profile username and occupation

--- a/blocks/profile/__occupation/profile__occupation.css
+++ b/blocks/profile/__occupation/profile__occupation.css
@@ -7,7 +7,6 @@
     margin: 0; 
     max-width: 318px; 
     text-overflow: clip; 
-    overflow: hidden; 
     white-space: nowrap;
 }
 
