--- a/blocks/profile/__username/profile__username.css
+++ b/blocks/profile/__username/profile__username.css
@@ -10,7 +10,6 @@
     text-overflow: clip;  
     max-width: 380px; 
     white-space: nowrap; 
-    overflow: hidden; 
 }
 
 @media only screen and (max-width: 772px) {
